--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
                  {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url or forloop.first and page.url == '/' or page.url == 'index.html' %}{% assign current = 'current' %}{% endif %}
                  <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
                      <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
-                 </li> 
+                 </li>
                  {% endfor %}
-                 <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
-                 <li><a href="https://github.com/brianmaierjr/long-haul/archive/master.zip">Download Theme</a></li>
+                 <li> <a href="https://www.github.com/nitesh4146" target="_blank">GitHub</a></li>
+                 <li><a href="https://www.guptanitish.com">Nitish's Portfolio</a></li>
              </ul>
          </nav>
      </div>
