--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                  </li>
                  {% endfor %}
                  <li> <a href="https://www.github.com/nitesh4146" target="_blank">GitHub</a></li>
-                 <li><a href="https://www.guptanitish.com">Nitish's Portfolio</a></li>
+                 <li><a href="https://www.guptanitish.com" target="_blank">Nitish's Portfolio</a></li>
              </ul>
          </nav>
      </div>
